<?xml version="1.0"?>
<package format="2">
  <name>mbf_demo_controller</name>
  <version>0.1.0</version>
  <description>The mbf_demo_controller package</description>

  <maintainer email="spuetz@uos.de">Sebastian Pütz</maintainer>
  <author email="spuetz@uos.de">Sebastian Pütz</author>
  
  <license>3-Clause BSD</license>

  <depend>roscpp</depend>
  <depend>mbf_costmap_core</depend>
  <depend>mbf_msgs</depend>
  <depend>pluginlib</depend>
  <depend>tf</depend>
  <depend>costmap_2d</depend>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <mbf_costmap_core plugin="${prefix}/mbf_demo_controller.xml" />
  </export>
</package>
