<?xml version="1.0"?>
<package format="2">
    <name>mbf_moveback_recovery</name>
    <version>0.0.0</version>
    <description>
        This package provides a simple recovery behavior for Move Base Flex which moves back a specified length
    </description>
    <maintainer email="spuetz@uos.de">Sebastian Pütz</maintainer>
    <author email="fistutzenste@uos.de">Finn Stutzenstein</author>

    <license>3-Clause BSD</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>roscpp</depend>
    <depend>tf</depend>
    <depend>costmap_2d</depend>
    <depend>pluginlib</depend>
    <depend>mbf_msgs</depend>
    <depend>mbf_costmap_core</depend>

    <export>
        <mbf_costmap_core plugin="${prefix}/moveback_recovery_plugin.xml" />
    </export>

</package>
